hphp/test/slow/sealed/sealed_classes3.php.expectf
Fatal error: Class SomeOtherOtherClass may not inherit from sealed interface (SomeSealedInterface) without being in the whitelist in %s/hphp/test/slow/sealed/sealed_classes3.php on line 8
